--- a/links.html
+++ b/links.html
@@ -1,4 +1,3 @@
-
 <!-- 26/2/2018
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -108,6 +107,7 @@ h1 {
         <a href="http://www.innovathens.gr/">innovathens</a>|       	
         <a href="https://www.hackerspace.gr">hackerspace</a> |
         <a href="https://thecube.gr">thecube</a> |  
+        <a href=" http://www.infocomworld.gr">infocomworld</a> |  
    
  <br><font size=2.5><b>links</b></font><br>
 		<a href="https://www.raspberrypi.org/">raspberrypi</a>|
@@ -121,8 +121,11 @@ h1 {
         <a href="http://www.securitymanager.gr/newsite/index.php">securitymanager</a>| 
         <a href="https://www.hackster.io/">hackster</a>| 
 
-<br><font size=2.5><b>apps</b></font><br>  
-		<a href="http://everycircuit.com/">everycircuit</a>| 
+<br><font  size=2.5><b>Mobile & Apps</b></font><br>
+		<a href="http://everycircuit.com/">everycircuit</a>  |  
+        <a href="https://scratch.mit.edu">scratch</a>  |   
+        <a href="http://appinventor.mit.edu/explore/">appinventor</a>  |   
+      	<a href="http://www.doctorandroid.gr/">doctorandroid</a>  |         
 
 <br><font size=2.5><b>Shopping</b></font><br>
 		<a href="https://www.hellasdigital.gr/">hellasdigital</a>|
@@ -154,19 +157,22 @@ h1 {
 		<a href="https://www.befunky.com/">befunky</a>| 
 
 <br><font size=2.5><b>Browser</b></font><br>  
-		<a href="https://www.torproject.org/">TOR</a>| 
-		<a href="https://www.mozilla.org/el/firefox/new/">firefox</a>| 
+		<a href="http://www.opera.com/el">Opera</a>  |  
+        <a href="https://www.chromium.org">Chromium</a>  |  
+        <a href="https://www.torproject.org/">TOR</a>  |  
+		<a href="https://www.mozilla.org/el/firefox/new/">Firefox</a>  |  
 
-<br><font size=2.5><b>design</b></font><br>
+<br><font size=2.5><b>Design</b></font><br>
         <a href="https://www.tinkercad.com/">tinkercad</a>|  
   
-<br><font size=2.5><b>diagrams</b></font><br>
+<br><font size=2.5><b>Diagrams</b></font><br>
         <a href="https://cacoo.com/lang/el/">Cacoo</a>|    
 
-<br><font size=2.5><b>blogs</b></font><br>
-        <a href="http://www.insomnia.gr/">insomnia</a>| 
+<br><font size=2.5><b>Blogs</b></font><br>
+        <a href="http://www.insomnia.gr/">Insomnia</a>  |  
+        <a href="https://unboxholics.com">Unboxholics</a>  |  
         
-<br><font size=2.5><b>BOOKS</b></font><br>
+<br><font size=2.5><b>eBOOKS</b></font><br>
         <a href="https://free-ebooks.gr/">ebooks</a>| 
         <a href="http://www.openbook.gr/">openbook</a>| 
         <a href="http://ebooks.edu.gr/new/">edu</a>| 
@@ -175,7 +181,7 @@ h1 {
         <a href="http://www.kavafis.gr/index.asp">kavafis</a>| 
         <a href="http://www.ptable.com/?lang=el">ptable</a>| 
  
-<br><font size=2.5><b>OPEN FREE PROGRAMMES</b></font><br>
+<br><font size=2.5><b>OPEN or FREE PROGRAMMES</b></font><br>
         <a href="https://www.apachefriends.org/index.html">apachefriends</a>|  
         <a href="https://www.wireshark.org/">wireshark</a>|  
         <a href="https://www.blender.org/">blender</a>|  
@@ -186,24 +192,16 @@ h1 {
         <a href="https://el.libreoffice.org/">libreoffice</a>|  
         <a href="http://www.openoffice.org/el/">openoffice</a>|  
         <a href="http://www.videolan.org/vlc/">vlc</a>|  
-
-<br><font  size=2.5><b>CODE</b></font><br>
-        <a href="https://scratch.mit.edu">scratch</a>|  
-        <a href="http://appinventor.mit.edu/explore/">appinventor</a>|  
+        <a href="https://www.clementine-player.org/el/">clementine</a>| 
+        <a href="https://opensource.com">opensource</a>| 
+		<a href="https://prezi.com/">Prezi</a>| 
+        <a href="http://www.rainmeter.net">RainMeter</a>|
+        <a href="http://redmp3.cc/"> freemp3 </a>
   
 <br><font size=2.5><b>NEWS</b></font><br>
         <a href="http://lifehacker.com/">lifehacker</a>| 
         <a href="http://www.pcsteps.gr/">pcsteps</a>| 
-  
-<br><font size=2.5><b>FREE</b></font><br> 
-        <a href="https://prezi.com/">Prezi</a>| 
-        <a href="http://www.rainmeter.net">RainMeter</a>|
-        <a href="http://redmp3.cc/"> freemp3 </a>
-  
-<br><font  size=2.5><b>OPEN</b></font><br>  
-        <a href="https://www.clementine-player.org/el/">clementine</a>| 
-        <a href="https://opensource.com">opensource</a>| 
-
+ 
 <br><font  size=2.5><b>MAKE</b></font><br> 
         <a href="http://makezine.com/">makezine</a>|
         <a href="https://www.adafruit.com/">adafruit</a>|
@@ -219,53 +217,50 @@ h1 {
         <a href="https://www.wix.com">Wix</a>| 
     	<a href="http://www.weebly.com">Weebly</a>| 
 
-<br><font  size=2.5><b>Mobile</b></font><br>
-      	<a href="http://www.doctorandroid.gr/">doctorandroid</a>| 
-
 <br><font  size=2.5><b>Linux</b></font><br>
       	<a href="http://www.linuxinsider.gr/">linuxinsider</a>| 
   
 <br><font  size=2.5><b>Pirate</b></font><br>  
-	  <a href="https://kickass.unblocked.la/">kickass</a>| 
-	  <a href="https://thepiratebay.vg/">tpb</a>|   
+	  <a href="https://kickass.unblocked.la/">kickass</a>  |   
+	  <a href="https://thepiratebay.vg/">tpb</a>  |     
   
 <br><font  size=2.5><b>PUAS</b></font><br>  
-		<a href="http://auto.teipir.gr/">auto</a>| 
-		<a href="http://lib.puas.gr/">lib</a>| 
-		<a href="http://www.teipir.gr/mke/">mke</a>| 
-		<a href="http://gdias.teipir.gr/">gdias</a>| 
-		<a href="http://www.teipir.gr/index.php/el/">teipir</a>| 
-		<a href="http://auto-hsae.teipir.gr/#homepageh">hsae</a>| 
+		<a href="http://auto.teipir.gr/">auto</a>  |  
+		<a href="http://lib.puas.gr/">lib</a>  |  
+		<a href="http://www.teipir.gr/mke/">mke</a>  |   
+		<a href="http://gdias.teipir.gr/">gdias</a>  |   
+		<a href="http://www.teipir.gr/index.php/el/">teipir</a>  |   
+		<a href="http://auto-hsae.teipir.gr/#homepageh">hsae</a>  |   
   
 <br><font size=2.5><b>Office</b></font><br>
-		<a href="http://www.openoffice.org/el/">openoffice</a>|
-		<a href="https://el.libreoffice.org/">libreoffice</a>|
-		<a href="https://wiki.gnome.org/Apps/Evince">Evince</a>|
-		<a href="https://www.wps.com">wps</a>| 
+		<a href="http://www.openoffice.org/el/">openoffice</a>  |  
+		<a href="https://el.libreoffice.org/">libreoffice</a>  |  
+		<a href="https://wiki.gnome.org/Apps/Evince">Evince</a>  |  
+		<a href="https://www.wps.com">wps</a>  |  
 
 <br><font size=2.5><b>HOW TO</b></font><br>  
-    	<a href="http://www.wikihow.com/Main-Page">wikihow</a>| 
-    	<a href="http://www.instructables.com/">instructables</a>|
+    	<a href="http://www.wikihow.com/Main-Page">wikihow</a>  |  
+    	<a href="http://www.instructables.com/">instructables</a>  |  
 
 <br><font  size=2.5><b>FilmNet</b></font><br>  
-      <a href="http://greekdocumentaries2.blogspot.gr/">greekdocumentaries</a>| 
-      <a href="http://www.dailymotion.com/CosmosgreekDocumentaries">CosmosgreekDocumentaries</a>| 
-      <a href="http://thegeeksmedia.blogspot.gr/">thegeeksmedia</a>|
-      <a href="https://oipeirates.se/">oipeirates</a>|
-      <a href="http://gamatotv.me/">gamatotv</a>|
+		<a href="http://greekdocumentaries2.blogspot.gr/">greekdocumentaries</a>  |  
+		<a href="http://www.dailymotion.com/CosmosgreekDocumentaries">CosmosgreekDocumentaries</a>  | 		<a href="http://thegeeksmedia.blogspot.gr/">thegeeksmedia</a>  |  
+		<a href="https://oipeirates.se/">oipeirates</a>  |  
+		<a href="http://gamatotv.me/">gamatotv</a>  |  
 
 <br><font  size=2.5><b>more</b></font><br>  
-    	<a href="http://www.dwrean.net/">Dwrean</a>| 
-    	<a href="http://www.xrisima.com/">xrisima</a>|
-    	<a href="http://osarena.net/">osarena</a>|
-    	<a href="https://ellak.gr/">ellak</a>|
-        <a href="https://cerebrux.net/">cerebrux</a>|
-        <a href="http://www.epinoo.gr/">epinoo</a>|
-       <a href=" http://www.bitcoin-gr.org/">bitcoin</a>|
+    	<a href="http://www.dwrean.net/">Dwrean</a>  |  
+    	<a href="http://www.xrisima.com/">Xrisima</a>  |  
+    	<a href="http://osarena.net/">Osarena</a>  |  
+    	<a href="https://pinguin.land">Pinguin Land</a>  |         
+    	<a href="https://ellak.gr/">ellak</a>  |  
+        <a href="https://cerebrux.net/">Cerebrux</a>  |  
+        <a href="http://www.epinoo.gr/">Epinoo</a>  |  
+        <a href=" http://www.bitcoin-gr.org/">Bitcoin</a>  |  
 
   <br><font size=2.5><b>Friends</b></font><br>  
-    	<a href="http://www.ardumotive.com/">ardumotive</a>| 
-    	<a href="https://www.youtube.com/channel/UCboteGFyO5fTflI00DikhmA">@ria3w</a>|
+    	<a href="http://www.ardumotive.com/">Ardumotive</a>  |  
+    	<a href="https://www.youtube.com/channel/UCboteGFyO5fTflI00DikhmA">@ria3w</a>  |  
 <!-- =============================================== -->   
 </div>
 </body>
