--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
-<!--The "about" page
 
+<!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 1/2/2018  |  Alpha Stage -->
+Handcrafted With ❤ By: Alexandros Papaspyrou -->
 
 <!DOCTYPE html> 
 <html>
@@ -21,17 +20,16 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 .w3-bar-block .w3-bar-item {padding: 16px}
 </style>
 <body>
-<a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a>
+<a href="https://alexandroshub.github.io/index">Home</a>
 <div id="about" class="w3-container person">
   <br>
   <img class="w3-round  w3-animate-top" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
   <h5 class="w3-opacity">Welcome in my personal website <br>100% HTML Hosted by Github<br> Handcrafted With ❤ By: Alexandros Papaspyrou</h5>
-<hr><h4><i class="fa fa-clock-o"></i> Last Update: 1/2/2018 <br> Alpha Stage </h4>
+<hr><h4><i class="fa fa-clock-o"></i> Last Update: 10/3/2018 <br> Alpha Stage </h4>
+Hi, I’m Alexandros. I’m a student living in Athens. <br>  I am a fan of automation, computers, and technology.  <br> I’m also interested in volunteering and DIY.
 <hr></div>
 
-
-
-<!-- SSM -->
+	<!-- SSM -->
 <style>
 .accordion {    background-color: #eee;    color: #444;  cursor: pointer;   padding: 18px;    width: 100%;   border: none;   text-align: left;    outline: none;   font-size: 15px;   transition: 0.4s; }
 .active, .accordion:hover {  background-color: #ccc;}
@@ -39,7 +37,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 .active:after {    content: "\2212";}
 .panel {    padding: 0 18px;    background-color: white;    max-height: 0;    overflow: hidden;    transition: max-height 0.2s ease-out;}
 </style>
-
 
 <button class="accordion">Contact</button>
 <div class="panel">
@@ -51,7 +48,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <button onclick="skype()" class="w3-button w3-blue" ><i class="fa fa-skype"></i></button><script>function skype() { alert("a-papaspyrou@outlook.com.gr");}</script>
  </p>
 </div>
-
+	
 <button class="accordion">Pages</button>
 <div class="panel">
  <p>
@@ -64,13 +61,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 
 <button class="accordion">LEGACY</button>
 <div class="panel">
-
- <p>Ο διαδικτυακός αυτός χώρος εξελίσσεται και συντηρείται αποκλειστικά από τον Alexandro Papaspyrou. Γίνεται κάθε προσπάθεια ώστε να παρέχονται χωρίς διακοπή όλες οι σελίδες, οι υπηρεσίες, οι επιλογές και τα περιεχόμενα αλλά δεν μπορούμε να εγγυηθούμε ότι δεν θα υπάρξουν αστοχίες και σφάλματα. Λαμβάνουμε όλα τα απαραίτητα μέτρα ώστε να μην υπάρξουν ιοί η άλλο κακόβουλο λογισμικό στην ιστοσελίδα ή στους εξυπηρετητές (servers) που την φιλοξενούν, αλλά δεν μπορούμε να εγγυηθούμε τα αποτελέσματα. Οι δημιουργοί της παρούσας ιστοσελίδας διατηρούν το δικαίωμα να διακόψουν προσωρινά ή μόνιμα τη λειτουργία της, για οποιονδήποτε λόγο. Σε αυτή την περίπτωση δεν φέρουν καμία ευθύνη για τυχόν απώλεια δεδομένων, κειμένων, φωτογραφιών κλπ. που έχουν αναρτηθεί από κάποιον χρήστη. Το site, μεταξύ άλλων, μπορεί να υποστηρίζει συχνές ερωτήσεις, δυνατότητα επικοινωνίας, διαφημίσεις, banners, δημοσκοπήσεις και μηνύματα σε σημεία που επιλέγουν οι διαχειριστές του.</p>
-	<p>Το Site ελέγχεται καθημερινά για ιούς και κακόβουλο λογισμικό από https://www.virustotal.com https://quttera.com https://sitecheck.sucuri.net. Το περιεχόμενο και η πρόσβαση στο site ήταν, είναι και θα παραμείνει δωρεάν. Όλο το site είναι 100% HTML γραμμένο με λεπτομέρεια και αγάπη . https://www.w3schools.com/ Με online εμπειρία περισσότερο από 6 χρόνια.</p>
-	<p>DadoBox / RoboDay & many more... <br>online since February 2011</p>
-
+  <p><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></p>
+  <p>Ο διαδικτυακός αυτός χώρος εξελίσσεται και συντηρείται αποκλειστικά από τον Alexandro Papaspyrou. Γίνεται κάθε προσπάθεια ώστε να παρέχονται χωρίς διακοπή όλες οι σελίδες, οι υπηρεσίες, οι επιλογές και τα περιεχόμενα αλλά δεν μπορούμε να εγγυηθούμε ότι δεν θα υπάρξουν αστοχίες και σφάλματα. Λαμβάνουμε όλα τα απαραίτητα μέτρα ώστε να μην υπάρξουν ιοί η άλλο κακόβουλο λογισμικό στην ιστοσελίδα ή στους εξυπηρετητές (servers) που την φιλοξενούν, αλλά δεν μπορούμε να εγγυηθούμε τα αποτελέσματα. Οι δημιουργοί της παρούσας ιστοσελίδας διατηρούν το δικαίωμα να διακόψουν προσωρινά ή μόνιμα τη λειτουργία της, για οποιονδήποτε λόγο. Σε αυτή την περίπτωση δεν φέρουν καμία ευθύνη για τυχόν απώλεια δεδομένων, κειμένων, φωτογραφιών κλπ. που έχουν αναρτηθεί από κάποιον χρήστη. Το site, μεταξύ άλλων, μπορεί να υποστηρίζει συχνές ερωτήσεις, δυνατότητα επικοινωνίας, διαφημίσεις, banners, δημοσκοπήσεις και μηνύματα σε σημεία που επιλέγουν οι διαχειριστές του.</p>
+      <p>Το Site ελέγχεται καθημερινά για ιούς και κακόβουλο λογισμικό από https://www.virustotal.com https://quttera.com https://sitecheck.sucuri.net. Το περιεχόμενο και η πρόσβαση στο site ήταν, είναι και θα παραμείνει δωρεάν. Όλο το site είναι 100% HTML γραμμένο με λεπτομέρεια και αγάπη . https://www.w3schools.com/ Με online εμπειρία περισσότερο από 6 χρόνια.</p>
+     <h4>Blog</h4> 
+  <p>To robodayblog διατηρεί το δικαίωμα να διαγράψει μερικώς ή ολικώς, για οποιοδήποτε λόγο και χωρίς προηγούμενη ειδοποίηση, οτιδήποτε έχει δημοσιευτεί, χωρίς κανένα περιορισμό. Δημοσιεύματα που περιέχονται στο robodayblog παρέχονται «Ως έχουν» χωρίς καμμίας μορφής εγγύηση για την ορθότητα, η έγκριση για συγκεκριμένη χρήση η προορισμό. Το robodayblog δεν έχει καμμία ευθύνη για την ακρίβεια η πληρότητα των δημοσιευμάτων. Το robodayblog περιέχει συμβουλές, γνώμες, δηλώσεις από διάφορες πηγές. Το robodayblog δεν εκπροσωπεί, αντιπροσωπεύει, ή υιοθετεί ή αποδέχεται ή πιστοποιεί την ακρίβεια ή πιστότητα οποιασδήποτε συμβουλής, γνώμης, δηλώσεως ανεξαρτήτως προέλευσης η πηγής. Η αποδοχή ή/και χρήση συμβουλών, γνωμών, δηλώσεων η οποιασδήποτε άλλης πληροφορίας που δημοσιεύεται στο robodayblog αποτελεί αποκλειστική ευθύνη του ΧΡΗΣΤΗ. Σε περίπτωση που ο ΧΡΗΣΤΗΣ δεν είναι ευχαριστημένος απο τις δυνατότητες, λειτουργίες και δημοσιεύματα στο robodayblog είναι στην αποκλειστική του ευχαίρια να διακόψει τη χρήση του robodayblog . To robodayblog περιέχει και αναφορές σε δικτυακούς τόπους τρίτων. Οι δικτυακοί τόποι τρίτων δεν είναι κάτω απο τον έλεγχο του robodayblog και το robodayblog δεν φέρει καμμία ευθύνη για δημοσιεύματα ή άλλες παραπομπές που αυτοί οι δικτυακοί τόποι περιλαμβάνουν.  ΧΡΗΣΤΗΣ είναι οποιοδήποτε ενήλικο φυσικό πρόσωπο που με τη βοήθεια Ηλεκτρονικού Υπολογιστή συνδέεται μέσω Internet και προβάλλει στην οθόνη του τα κείμενα και το περιεχόμενο του robodayblog, ανεξάρτητα αν έχει κάποιο λογαριασμό είτε είναι απλά ανώνυμος επισκέπτης.</p>
+  <p>DadoBox / RoboDay & many more... <br>online since February 2011</p>
 </div>
-
 
 <button class="accordion">SOCIAL</button>
 <div class="panel">
@@ -96,13 +93,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 
 </p></div>
 
-
 <script>
 var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < acc.length; i++) {acc[i].onclick = function() { this.classList.toggle("active"); var panel = this.nextElementSibling; if (panel.style.maxHeight){panel.style.maxHeight = null; } else { panel.style.maxHeight = panel.scrollHeight + "px"; }}}
 </script>
 <!-- SSM -->
-
-
 <!-- Footer --><footer class="w3-center w3-black w3-padding-16">
 <!-- top --> <a href="#abouthome" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
 <!-- cv --> <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
