--- a/about.html
+++ b/about.html
@@ -82,6 +82,9 @@ Hi, I’m Alexandros. I’m a student living in Athens. <br>  I am a fan of auto
 <div class="panel">
 <p>
 
+	<a class="w3-button w3-light-grey" href="https://drive.google.com/file/d/1E5RqD2v_YAe7_9FH1I08qXd23OeQx8yQ/view?usp=sharing">
+	<i class="fa fa-twitter"></i></a>
+	
 <a class="w3-button w3-light-grey" href="https://twitter.com/A_Papaspyrou"><i class="fa fa-twitter"></i></a>
 <a class="w3-button w3-light-grey" href=" https://gr.linkedin.com/in/alexandrospapaspyrou  "><i class="fa fa-linkedin"></i></a>
 <a class="w3-button w3-light-grey" href=" https://github.com/alexandroshub "><i class="fa fa-github-alt"></i></a>
