--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@ body, html {
     <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
     <p><a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a></p>
 
-<span class="w3-tag w3-black"><a href="https://alexandroshub.github.io/about" style="text-decoration: none">ABOUT</a></span>  <span class="w3-tag w3-black w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none">CV</a></span> <span class="w3-tag w3-black w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none">PORTFOLIO</a></span>  <span class="w3-tag w3-black w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none">BLOG</a></span>
+<span class="w3-tag w3-black w3-hide-small"><a href="https://alexandroshub.github.io/about" style="text-decoration: none">ABOUT</a></span>  <span class="w3-tag w3-black w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none">CV</a></span> <span class="w3-tag w3-black w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none">PORTFOLIO</a></span>  <span class="w3-tag w3-black w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none">BLOG</a></span>
   </div> 
+  <span class="w3-hide-small">
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
 <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter"></i></a>
 <!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin"></i></a>
 <!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" ></i></a> | 
 <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
-</div>
+</div></span>
 </header>
 
 <!-- Footer -->
