--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!-- 26/2/2018
+<!-- 
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -10,10 +10,11 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <html>
 <title>Papaspyrou</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <head>
 <meta charset="UTF-8">
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 * {
     box-sizing: border-box;
@@ -113,9 +114,12 @@ h1 {
 <div class="row">
   <div class="column nature">
     <div class="content">
-      <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" alt="Mountains" style="width:100%">
+      <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" alt="CoNo" style="width:100%">
       <h4>CoNo</h4>
       <p>soon..</p>
+      <i class="fa fa-youtube-play"></i>
+      <i class="fa fa-vimeo"></i>
+      <i class="fa fa-dropbox"></i>
     </div>
   </div>
   <div class="column nature">
@@ -124,8 +128,8 @@ h1 {
       <h4>Το κύκλωμα του Φωτοδιακόπτη</h4>
       <p>
 Ο πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.
-Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.
-Κάπως έτσι το φτιάξαμε στο εργ. Ηλ. Συστημάτων.</p>
+Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.</p>
+ <a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><button class="btn active">1</button></a>
     </div>
   </div>
   
@@ -135,13 +139,10 @@ h1 {
       <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
       <h4>Παιχνίδι σε VisualBasic για PC</h4>
       <p> (χωρίς εγκατάσταση)</p> 
-    </div>
-  </div>
-  <div class="column cars">
-    <div class="content">
-    <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
-      <h4>Fast</h4>
-      <p>Lorem ipsum dolor..</p>
+      <a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><button class="btn active">1</button></a>
+<a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><button class="btn active">2</button></a>
+<a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><button class="btn active">3</button></a>
+<a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><button class="btn active"><i class="fa fa-code"></i></button></a>
     </div>
   </div>
 
@@ -149,7 +150,10 @@ h1 {
     <div class="content">
       <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
       <h4>Μελέτη και Κατασκευή Μichatron</h4>
-      <p>Lorem ipsum dolor..</p>
+      <p>.</p>
+      <a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><button class="btn active"><i class="fa fa-file-text-o"></i></button></a>
+      <a href="https://vimeo.com/141997888"><button class="btn active"><i class="fa fa-vimeo"></i></button></a>
+      <a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><button class="btn active"><i class="fa fa-code"></i></button></a>
     </div>
   </div>
   
@@ -159,11 +163,11 @@ h1 {
       <h4>Η εξέλιξη των Η/Υ</h4>
       <p>(από τον άβακα στο Tablet)
 Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp
-"><i class="fa fa-user"></i></a>
-<a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-user"></i></a>
 </p>
+<a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp
+"><button class="btn active"><i class="fa fa-file-text-o"></i></button></a>
+<a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><button class="btn active"><i class="fa fa-slideshare"></i></button></a>
+
     </div>
   </div>
   <div class="column pub">
@@ -171,7 +175,20 @@ h1 {
     <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Pub" style="width:100%">
       <h4>MPPT</h4>
       <p>“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet)
-Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.</p>
+Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.</p> 
+<a href="https://issuu.com/a-papaspyrou/docs/mppt_final"><button class="btn active"><i class="fa fa-file-text-o"></i></button></a>
+<a href="https://www.slideshare.net/alexandrospapaspurou/mppt-30080120"><button class="btn active"><i class="fa fa-slideshare"></i></button></a>
+    </div>
+  </div>
+  
+    <div class="column pub">
+    <div class="content">
+    <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Pub" style="width:100%">
+      <h4>Αρχείο</h4>
+      <p>με τις εργασίες μου</p> 
+<a href="https://www.dropbox.com/sh/y7j320ldle8678d/AABMt-dGKjWB1ty2JnuflvcUa?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
+<a href="https://www.dropbox.com/sh/63m0fmvfn96rwd5/AAA3YfooM9GAUJk_eMntRQjga?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
+<a href="https://www.dropbox.com/sh/a17b3xchllgy4j9/AAA4G9X0O5gAYg0MqqYIc8qva?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
     </div>
   </div>
 <!-- END GRID -->
@@ -182,7 +199,6 @@ h1 {
 
 
 <!-- Footer --><footer class="w3-center w3-black w3-padding-16">
-<!-- cv --> <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>  |  
 <!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018
 </footer><!-- End footer -->
 
