--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -19,12 +20,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 .w3-bar-block .w3-bar-item {padding: 16px}
 </style>
 <body>
-<a href="https://alexandroshub.github.io/index">Home</a>
+<a class="w3-button w3-red" href="https://alexandroshub.github.io/index"><b>ENTER<i class="w3-margin-left fa fa-sign-in"></i></b></a>
 <div id="about" class="w3-container person">
   <br>
   <img class="w3-round  w3-animate-top" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
   <h5 class="w3-opacity">Welcome in my personal website <br>100% HTML Hosted by Github<br> Handcrafted With ❤ By: Alexandros Papaspyrou</h5>
-<hr><h4><i class="fa fa-clock-o"></i> Last Update: 10/3/2018 <br> Alpha Stage </h4>
+  
+<hr><h4><i class="fa fa-clock-o"></i> Last Update: 25/4/2018 <br> Alpha Stage </h4>
 Hi, I’m Alexandros. I’m a student living in Athens. <br>  I am a fan of automation, computers, and technology.  <br> I’m also interested in volunteering and DIY.
 <hr></div>
 
@@ -81,10 +83,6 @@ Hi, I’m Alexandros. I’m a student living in Athens. <br>  I am a fan of auto
 <button class="accordion">SOCIAL</button>
 <div class="panel">
 <p>
-
-	<a class="w3-button w3-light-grey" href="https://drive.google.com/file/d/1E5RqD2v_YAe7_9FH1I08qXd23OeQx8yQ/view?usp=sharing">
-	<i class="fa fa-twitter"></i></a>
-	
 <a class="w3-button w3-light-grey" href="https://twitter.com/A_Papaspyrou"><i class="fa fa-twitter"></i></a>
 <a class="w3-button w3-light-grey" href=" https://gr.linkedin.com/in/alexandrospapaspyrou  "><i class="fa fa-linkedin"></i></a>
 <a class="w3-button w3-light-grey" href=" https://github.com/alexandroshub "><i class="fa fa-github-alt"></i></a>
@@ -110,13 +108,11 @@ var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < a
 </script>
 <!-- SSM -->
 <!-- Footer --><footer class="w3-center w3-black w3-padding-16">
-<!-- top --> <a href="#abouthome" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-<!-- cv --> <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
 <!-- social --><div class="w3-black w3-center w3-padding-12">
 <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:15px;color:white"></i></a>
 <!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:15px;color:white"></i></a>
 <!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a> | 
-<!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
+<!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2011-2018</div>
 <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
 </footer><!-- End footer -->
 </body>
