--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- INDEX_27apr  -->
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -38,9 +40,9 @@ body, html {
     <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
     <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
-    <p><a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a></p>
+    <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off"><i class="fa fa-file-text-o"></i>  My Cv</a></p>
 
-<span class="w3-tag w3-black w3-hide-small"><a href="https://alexandroshub.github.io/about" style="text-decoration: none">ABOUT</a></span>  <span class="w3-tag w3-black w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none">CV</a></span> <span class="w3-tag w3-black w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none">PORTFOLIO</a></span>  <span class="w3-tag w3-black w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none">BLOG</a></span>
+<span class="w3-tag w3-black w3-hide-small"><a href="https://alexandroshub.github.io/about" style="text-decoration: none">ABOUT</a></span> <!-- <span class="w3-tag w3-black w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none">CV</a></span> --> <span class="w3-tag w3-black w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none">PORTFOLIO</a></span>  <span class="w3-tag w3-black w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none">BLOG</a></span>
   </div> 
   <span class="w3-hide-small">
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
