--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body, html {
     <span class="w3-jumbo w3-hide-small">Welcome</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Welcome </span><br>
    
-<span class="w3-large">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία , όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία..</span>
+<span class="w3-large">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία ,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία..</span>
     <p>
     <a class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off"  onclick="on()">
     <i class="fa fa-android"></i> NEW APP</a></p>
