--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
-<!-- 
+<!-- PORTFOLIO_13Jun2018 -->
 
+<!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
@@ -96,11 +97,7 @@ h1 {
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a>
-
-<hr>
-
-<h2>PORTFOLIO</h2>
+<h2><a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a> PORTFOLIO</h2>
 
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
@@ -126,10 +123,8 @@ h1 {
     <div class="content">
     <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="Lights" style="width:100%">
       <h4>Το κύκλωμα του Φωτοδιακόπτη</h4>
-      <p>
-Ο πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.
-Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.</p>
- <a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><button class="btn active">1</button></a>
+   
+ <a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
     </div>
   </div>
   
@@ -139,9 +134,9 @@ h1 {
       <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
       <h4>Παιχνίδι σε VisualBasic για PC</h4>
       <p> (χωρίς εγκατάσταση)</p> 
-      <a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><button class="btn active">1</button></a>
-<a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><button class="btn active">2</button></a>
-<a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><button class="btn active">3</button></a>
+      <a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
+<a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
+<a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><button class="btn active"><i class="fa fa-dropbox"></i></button></a>
 <a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><button class="btn active"><i class="fa fa-code"></i></button></a>
     </div>
   </div>
@@ -196,11 +191,14 @@ h1 {
 
 <!-- END MAIN -->
 </div>
+<h2><a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a> PLUS</h2>
+<!-- ////////////////////////////////////////////////////////// -->
+ <iframe src="https://robodayblog.wordpress.com" height="400" width="100%"></iframe> 
+<!-- ////////////////////////////////////////////////////////// -->
 
-
+<hr>
 <!-- Footer --><footer class="w3-center w3-black w3-padding-16">
 <!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018
-</footer><!-- End footer -->
 
 
 <script>
