--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- INDEX_13Jun2018  -->
+<!-- INDEX_18Jun2018  -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -51,7 +51,8 @@ body, html {
     <i class="fa fa-android"></i> NEW APP</a></p>
     
 <span class="w3-tag w3-blue w3-hide-small"><a href="https://alexandroshub.github.io/about" style="text-decoration: none"><i class="fa fa-info-circle"></i></a></span>  <span class="w3-tag w3-red w3-margin-bottom"><a href="https://alexandroshub.github.io/support.html" style="text-decoration: none"><i class="fa fa-support"></i></a></span>
-  <span class="w3-tag w3-green w3-margin-bottom"><a style="text-decoration: none" onclick="on()"><i class="fa fa-android"></i></a></span> <span class="w3-tag w3-orange w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none"><i class="fa fa-rss"></i></a></span> <span class="w3-tag w3-black w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none"><i class="fa fa-user-circle-o"></i></a></span> <span class="w3-tag w3-white w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none"><i class="fa fa-folder-open-o"></i></a></span>  
+  <span class="w3-tag w3-green w3-margin-bottom"><a style="text-decoration: none" onclick="on()"><i class="fa fa-android"></i></a></span> <span class="w3-tag w3-orange w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none"><i class="fa fa-rss"></i></a></span> <span class="w3-tag w3-black  w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none"><i class="fa fa-user-circle-o"></i></a></span> <span class="w3-tag w3-white w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none"><i class="fa fa-folder-open-o"></i></a></span>  
+<span class="w3-tag w3-purple w3-margin-bottom"><a href="https://alexandroshub.github.io/links.html" style="text-decoration: none"><i class="fa fa-external-link"></i></a></span> 
  
   </div> 
   <span class="w3-hide-small">
@@ -143,3 +144,4 @@ function w3_close() {mySidebar.style.display = "none";}
 </body>
 </html>
 <!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023  |  Sub: papaspyrou.alexandros@gmail.com -->
+<!-- Support: alexispapy@gmail.com  |    alexispapy@outlook.com  -->
